REGRESSION(287859@main): Building with USE_SKIA_OPENTYPE_SVG=ON fails with Clang 18.1+ https://bugs.webkit.org/show_bug.cgi?id=284779

Unreviewed build fix.

Move code around in order to have SkDOMParser declared earlier, before
the definition of the SkDOM::SkDOM() constructor, which is the point at
which the compiler needs to know the size and layout of the type.

* Source/ThirdParty/skia/src/xml/SkDOM.cpp:
(dupstr):
(SkDOMParser::SkDOMParser):
(SkDOMParser::getRoot const):
(SkDOMParser::flushAttributes):
(SkDOMParser::startCommon):

Canonical link: https://commits.webkit.org/287913@main